--- a/fourth.html
+++ b/fourth.html
@@ -1,5 +1,5 @@
 <html>
-<head><link rel="stysheet" href="style4.css"></head>
+<head><link rel="stylesheet" href="style4.css"></head>
 <body>
     <header>
 
