--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<head><link rel="stysheet" href="style.css"></head>
+<head><link rel="stylesheet" href="style.css"></head>
 <body>
     <header>
 
