--- a/second.html
+++ b/second.html
@@ -1,5 +1,5 @@
 <html>
-<head><link rel="stysheet" href="style2.css"></head>
+<head><link rel="stylesheet" href="style2.css"></head>
 <body>
     <header>
 
