--- a/third.html
+++ b/third.html
@@ -1,5 +1,5 @@
 <html>
-<head><link rel="stysheet" href="style3.css"></head>
+<head><link rel="stylesheet" href="style3.css"></head>
 <body>
     <header>
 
