--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <input placeholder="Поиск по сайту...">
 </section>
 
-    <main>
+<main>
        <div class="game-container">
 <img src="https://itorrents-igruha.org/uploads/posts/2022-09/1664538541_cover.jpg">
-<a href>Crossout
+<a href="third.html">Crossout
 </a>
        </div> <div class="game-container">
 <img src="https://itorrents-igruha.org/uploads/posts/2022-09/1664205484_cover.jpg">
-<a href>Euro Track Simulator 2
+<a href="second.html">Euro Track Simulator 2
 </a>
        </div> <div class="game-container">
 <img src="https://itorrents-igruha.org/uploads/posts/2024-08/1722960931_cover-tank.png">
-<a href>World Of Tanks
+<a href="fourth.html">World Of Tanks
 </a>
        </div>
 
